--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,28 @@
   </header>
   <main role="main">
     <!-- app goes here -->
+    <div class="gridContainer">
+      <div class="login">
+        <h1>Login Form</h1>
+        <form id="loginForm">
+          <input type="text" id="loginEmail" placeholder="email">
+          <input type="password" id="loginPassword" placeholder="password">
+          <input type="button" id="loginSubmit" value="Submit">
+          <input type="button" id="loginRegister" value="Register">
+        </form>
+      </div>
+      <div class="register" id="register">
+        <form id="registerForm">
+          <h1>Register Form</h1>
+          <input type="text" id="registerEmail" placeholder="email">
+          <input type="text" id="registerName" placeholder="name">
+          <input type="text" id="registerPassword" placeholder="password">
+          <input type="text" id="registerConfirmPassword" placeholder="confirm password">
+          <input type="button" id="registerSubmit" value="Submit">
+        </form>
+      </div>
+    </div>
+    
   </main>
   <footer>
     <p>&copy; Slackr</p>
