--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,55 +5,62 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Slackr</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- You can add your styles and scripts here -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" media="screen" href="styles/provided.css" />
 	<script type="module" src="src/helpers.js"></script>
 </head>
 
 <body>
-	<!-- This is an example app structure, you can modify this as much as you choose -->
-<header class="banner">
-	<h1>Slackr</h1>
-</header>
 <main role="main">
 	<!-- app goes here -->
 	<div class="notLoggedIn" id="notLoggedIn">
+		<h1>Slackr</h1>
 		<div class="login">
 			<h1>Login Form</h1>
 			<form id="loginForm">
 				<input type="text" id="loginEmail" placeholder="email" value="chanwoobaek@hotmail.com"><br>
-				<input type="password" id="loginPassword" placeholder="password" value="thisischa"><br>
+				<input type="password" id="loginPassword" placeholder="password" value="thisischan"><br>
 				<input type="button" id="loginSubmit" value="Submit">
 				<input type="button" id="loginRegister" value="Register">
 			</form>
 		</div>
 		<div class="register" id="register">
 			<form id="registerForm">
-			<h1>Register Form</h1>
-			<input type="text" id="registerEmail" placeholder="email" value="chanwoobaek@hotmail.com"><br>
-			<input type="text" id="registerName" placeholder="name" value="Chan"><br>
-			<input type="password" id="registerPassword" placeholder="password" value="thisischan"><br>
-			<input type="password" id="registerConfirmPassword" placeholder="confirm password" value="thisischan"><br>
-			<input type="button" id="registerSubmit" value="Submit">
+				<h1>Register Form</h1>
+				<input type="text" id="registerEmail" placeholder="email" value="chanwoobaek@hotmail.com"><br>
+				<input type="text" id="registerName" placeholder="name" value="Chan"><br>
+				<input type="password" id="registerPassword" placeholder="password" value="thisischan"><br>
+				<input type="password" id="registerConfirmPassword" placeholder="confirm password" value="thisischan"><br>
+				<input type="button" id="registerSubmit" value="Submit">
 			</form>
 		</div>
 		<div class="errorPopup" id="errorPopup">
 			<p id="errorMsg"></p>
 			<input type="button" id="errorClose" value="Close">
 		</div>
+		<p>&copy; Slackr</p>
 	</div>
 	<div class="loggedIn" id="loggedIn">
-		Hello
+		<div class="container-fluid vh-100" style="background-color: brown;">
+			<div class="row">
+				<div class="col-sm">1</div>
+				<div class="col-sm">2</div>
+				<div class="col-sm">3</div>
+			</div>
+			<div class="row">
+				<div class="col-sm">4</div>
+				<div class="col-sm">5</div>
+				<div class="col-sm">6</div>
+			</div>
+		</div>
 	</div>
-	
 </main>
-<footer>
-	<p>&copy; Slackr</p>
-</footer>
 <script type="module" src="src/main.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
