--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,22 +43,24 @@
 		<p>&copy; Slackr</p>
 	</div>
 	<div class="loggedIn" id="loggedIn">
-		<div class="channelsPublic">Public Channels</div>
+		<div class="channelsPublic">Public Channels
+			<p id="publicChannelList"></p>
+		</div>
 		<div class="channelInfo">Channel Info</div>
 		<div class="user">User
 			<input type="button" id="channelCreate" value="Create New Channel">
 		</div>
-		<div class="channelsPrivate">Private Channels</div>
+		<div class="channelsPrivate">Private Channels
+			<p id="privateChannelList"></p>
+		</div>
 		<div class="channelMessage">Channel Message</div>
 		<div class="channelCreateForm" id="channelCreateForm">
 			<form>
 				<h1>Create new channel</h1>
 				<input type="text" id="newChannelName" placeholder="Channel Name"><br>
 				<input type="text" id="newChannelDescription" placeholder="Channel Description"><br>
-				<input type="radio" name ="newChannel" id="newChannelPrivate">
+				<input type="checkbox" name ="newChannel" id="newChannelPrivate">
 				<label for="newChannelPrivate">Private</label><br>
-				<input type="radio" name ="newChannel" id="newChannelPublic">
-				<label for="newChannelPublic">Public</label><br>
 				<input type="button" id="newChannelSubmit" value="Submit">
 				<input type="button" id="newChannelClose" value="Close">
 			</form>
