--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,14 +46,18 @@
 		<div class="channelsPublic">Public Channels
 			<p id="publicChannelList"></p>
 		</div>
-		<div class="channelInfo">Channel Info</div>
+		<div class="channelInfo"><p>Channel Info</p> 
+			<p id="infoText">Choose a channel to view channel info</p>
+		</div>
 		<div class="user">User
 			<input type="button" id="channelCreate" value="Create New Channel">
 		</div>
 		<div class="channelsPrivate">Private Channels
 			<p id="privateChannelList"></p>
 		</div>
-		<div class="channelMessage">Channel Message</div>
+		<div class="channelMessage">Channel Message
+			<p id="messageText">Choose a channel to view channel message</p>
+		</div>
 		<div class="channelCreateForm" id="channelCreateForm">
 			<form>
 				<h1>Create new channel</h1>
