--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,7 +50,7 @@
 		</div>
 		<div class="channelInfo">
 			 
-			<p id="infoText">Choose a channel to view channel info</p>
+			<p id="infoText" class="infoText">Choose a channel to view channel info</p>
 			<input type="button" class="editChannelButton" id="editChannelButton" value="Edit channel">
 			<input type="button" class="leaveChannelButton" id="leaveChannelButton" value="Leave channel">
 		</div>
@@ -62,11 +62,11 @@
 			<h1>Private Channels</h1>
 			<p id="privateChannelList"></p>
 		</div>
-		<div class="channelMessage" id="channelMessage">
+		<div class="channelMessage bg-primary" id="channelMessage">
 			
 			<div class="messageView" id="messageText">Choose a channel to view channel message</div>
-			<input type="textarea" id="messageBox">
-			<input type="button" id="messageSend" value="Send">
+			<input type="textarea" class= "typeBox" id="messageBox">
+			<input type="button" class= "btn btn-success" id="messageSend" value="Send">
 		</div>
 		
 		<div class="channelCreateForm" id="channelCreateForm">
