WIP Pinned Messages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,9 +67,9 @@
 				<div class="modal-dialog modal-dialog-centered" role="document">
 					<div class="modal-content">
 						<div class="modal-body" id="modal-body">
-							<button id="laughEMJ" class="EMJ">&#128516;</button>
-							<button id="laughEMJ" class="EMJ">&#128525;</button>
-							<button id="laughEMJ" class="EMJ">&#128151;</button>
+							<input type="button" id="laughEMJ" class="EMJ" value="&#128516;"></button>
+							<input type="button" id="heartEyeEMJ" class="EMJ" value="&#128525;"></button>
+							<input type="button" id="heartEMJ" class="EMJ" value="&#128151;"></button>
 						</div>
 						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 					</div>
